@@ -8,50 +8,58 @@ import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
-import org.objectweb.asm.ClassReader;
 
 import selogger.EventType;
 import selogger.logging.Logging;
 import selogger.logging.io.MemoryLogger;
 import selogger.weaver.method.Descriptor;
 
+/**
+ * Test class for inner class
+ */
 public class InnerClassTest {
 
-	private WeaveLog weaveLog;
 	private Class<?> wovenClass;
 	private Class<?> ownerClass;
 	private MemoryLogger memoryLogger;
 	private EventIterator it;
 	
+	/**
+	 * Execute a weaving for a class and define them as Java classes 
+	 */
 	@Before
 	public void setup() throws IOException, ClassNotFoundException {
-		weaveLog = new WeaveLog(0, 0, 0);
-		String className = "selogger/testdata/SimpleTarget$StringComparator";
-		ClassReader r = new ClassReader(className);
+		// Load the woven class
 		WeaveConfig config = new WeaveConfig(WeaveConfig.KEY_RECORD_DEFAULT); 
-		ClassTransformer c = new ClassTransformer(weaveLog, config, r, this.getClass().getClassLoader());
-		WeaveClassLoader loader = new WeaveClassLoader();
-		wovenClass = loader.createClass("selogger.testdata.SimpleTarget$StringComparator", c.getWeaveResult());
+		WeaveClassLoader loader = new WeaveClassLoader(config);
+		wovenClass = loader.loadAndWeaveClass("selogger.testdata.SimpleTarget$StringComparator");
+		ownerClass = loader.loadClassFromResource("selogger.testdata.SimpleTarget", "selogger/testdata/SimpleTarget.class");
+
 		memoryLogger = Logging.initializeForTest();
-		
-		ClassReader r2 = new ClassReader("selogger/testdata/SimpleTarget");
-		ownerClass = loader.createClass("selogger.testdata.SimpleTarget", r2.b) ;
-		
-		it = new EventIterator(memoryLogger, weaveLog);
+		it = new EventIterator(memoryLogger, loader.getWeaveLog());
 	}
 	
+	/**
+	 * Remove woven class definition from memory
+	 */
 	@After
 	public void tearDown() {
 		wovenClass = null;
 		ownerClass = null;
 	}
 
+	/**
+	 * Execute a constructor of the woven class and 
+	 * check the correctness of the observed events 
+	 */
 	@Test
 	public void testSort() throws IOException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+		// Create an instance of woven class
 		Constructor<?> c = wovenClass.getConstructor(new Class<?>[]{ownerClass});
-		Object owner = ownerClass.newInstance();
+		Object owner = ownerClass.getDeclaredConstructor().newInstance();
 		Object o = c.newInstance(owner);
 
+		// Check the correctness of the recorded event sequence
 		Assert.assertTrue(it.next());
 		Assert.assertEquals(EventType.METHOD_ENTRY, it.getEventType());
 		Assert.assertEquals("selogger/testdata/SimpleTarget$StringComparator", it.getClassName());
