@@ -11,7 +11,6 @@ import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
-import org.objectweb.asm.ClassReader;
 
 import selogger.EventType;
 import selogger.logging.Logging;
@@ -21,37 +20,39 @@ import selogger.weaver.method.Descriptor;
 
 public class WeaverTest {
 
-	private WeaveLog weaveLog;
 	private Class<?> wovenClass;
 	@SuppressWarnings("unused")
 	private Class<?> innerClass;
 	private MemoryLogger memoryLogger;
 	private EventIterator it;
 	
+	/**
+	 * Execute a weaving for a class and define them as Java classes 
+	 */
 	@Before
 	public void setup() throws IOException {
-		weaveLog = new WeaveLog(0, 0, 0);
-		String className = "selogger/testdata/SimpleTarget";
-		ClassReader r = new ClassReader(className);
+		// Execute a weaving 
 		WeaveConfig config = new WeaveConfig(WeaveConfig.KEY_RECORD_DEFAULT); 
-		ClassTransformer c = new ClassTransformer(weaveLog, config, r, this.getClass().getClassLoader());
-		WeaveClassLoader loader = new WeaveClassLoader();
-		wovenClass = loader.createClass("selogger.testdata.SimpleTarget", c.getWeaveResult());
-		memoryLogger = Logging.initializeForTest();
-		
-		ClassReader r2 = new ClassReader("selogger/testdata/SimpleTarget$StringComparator");
-		innerClass = loader.createClass("selogger.testdata.SimpleTarget$StringComparator", r2.b) ;
+		WeaveClassLoader loader = new WeaveClassLoader(config);
+		wovenClass = loader.loadAndWeaveClass("selogger.testdata.SimpleTarget");
+		innerClass = loader.loadClassFromResource("selogger.testdata.SimpleTarget$StringComparator", "selogger/testdata/SimpleTarget$StringComparator.class");
 
-		it = new EventIterator(memoryLogger, weaveLog);
+		memoryLogger = Logging.initializeForTest();
+		it = new EventIterator(memoryLogger, loader.getWeaveLog());
 	}
 	
+	/**
+	 * Remove woven class definition from memory
+	 */
 	@After
 	public void tearDown() {
 		wovenClass = null;
 		innerClass = null;
 	}
 
-	
+	/**
+	 * check the correctness of the observed events for a constructor call 
+	 */
 	private void testBaseEvents(EventIterator it, Object instance) {
 		Assert.assertTrue(it.next());
 		Assert.assertEquals(EventType.METHOD_ENTRY, it.getEventType());
@@ -100,10 +101,13 @@ public class WeaverTest {
 
 	}
 	
+	/**
+	 * Test an instance method "getField"
+	 */
 	@Test
 	public void testWeaving() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 		
 		// Check events
 		testBaseEvents(it, o);
@@ -137,10 +141,13 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 
+	/**
+	 * Test an instance method "createArray"
+	 */
 	@Test
 	public void testArray() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 		
 		// Check events
 		testBaseEvents(it, o);
@@ -249,10 +256,13 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 	
+	/**
+	 * Test an instance method "exception"
+	 */
 	@Test
 	public void testException() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 
 		// Check events
 		testBaseEvents(it, o);
@@ -319,10 +329,13 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 	
+	/**
+	 * Test an instance method "synchronization"
+	 */
 	@Test
 	public void testSynchronization() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 
 		// Check events
 		testBaseEvents(it, o);
@@ -373,10 +386,13 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 
+	/**
+	 * Test an instance method "read"
+	 */
 	@Test
 	public void testRead() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 
 		// Check events
 		testBaseEvents(it, o);
@@ -403,10 +419,13 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 	
+	/**
+	 * Test an instance method "multiarray"
+	 */
 	@Test
 	public void testMultiarray() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 		
 		// Check events
 		testBaseEvents(it, o);
@@ -469,10 +488,13 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 
+	/**
+	 * Test an instance method "constString"
+	 */
 	@Test
 	public void testConstString() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 		
 		// Check events
 		testBaseEvents(it, o);
@@ -500,10 +522,13 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 
+	/**
+	 * Test an instance method "typeCheck"
+	 */
 	@Test
 	public void testTypeCheck() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 
 		// Check events
 		testBaseEvents(it, o);
@@ -564,11 +589,14 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 	
+	/**
+	 * Test an instance method "sort"
+	 */
 	@Test
 	public void testSort() throws IOException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 		
 		// Check events
 		testBaseEvents(it, o);
@@ -635,11 +663,14 @@ public class WeaverTest {
 
 	}
 
+	/**
+	 * Test an instance method "invokeVirtual"
+	 */
 	@Test
 	public void testInvokeVirtual() throws IOException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 		
 		// Check events
 		testBaseEvents(it, o);
@@ -720,11 +751,14 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 
+	/**
+	 * Test an instance method "invokeDynamic"
+	 */
 	@Test
 	public void testInvokeDynamic() throws IOException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 		
 		// Check events
 		testBaseEvents(it, o);
@@ -781,11 +815,14 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 
+	/**
+	 * Test an instance method "invokeDynamic2"
+	 */
 	@Test
 	public void testInvokeDynamic2() throws IOException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 		
 		// Check events
 		testBaseEvents(it, o);
@@ -856,11 +893,14 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 
+	/**
+	 * Test an instance method "invokeDynamic3"
+	 */
 	@Test
 	public void testInvokeDynamic3() throws IOException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 		
 		// Check events
 		testBaseEvents(it, o);
@@ -947,11 +987,14 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 
+	/**
+	 * Test an instance method "getFloat"
+	 */
 	@Test
 	public void testFloat() throws IOException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 		
 		// Check events
 		testBaseEvents(it, o);
@@ -973,11 +1016,14 @@ public class WeaverTest {
 		Assert.assertFalse(it.next());
 	}
 	
+	/**
+	 * Test an instance method "exceptionInCall"
+	 */
 	@Test
 	public void testExceptionInCall() throws IOException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 
 		// Event generation
-		Object o = wovenClass.newInstance();
+		Object o = wovenClass.getDeclaredConstructor().newInstance();
 		
 		// Check events
 		testBaseEvents(it, o);
